--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "babel-jest": "^27.0.6",
+    "babel-plugin-transform-export-extensions": "^6.22.0",
     "cesium": "^1.83.0",
     "craco-cesium": "^1.2.0",
     "react": "^17.0.2",
@@ -19,7 +19,7 @@
   "scripts": {
     "start": "craco start",
     "build": "craco build",
-    "test": "jest tests",
+    "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prettier-watch": "onchange '**/*.js' -- prettier --write {{changed}}"
   },
@@ -42,10 +42,14 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.14.8",
+    "@babel/plugin-transform-modules-commonjs": "^7.14.5",
     "@babel/preset-env": "^7.14.8",
     "@babel/preset-react": "^7.14.5",
+    "@react-mock/fetch": "^0.3.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "jest": "^27.0.6",
+    
+    "jest-fetch-mock": "^3.0.3",
     "prettier": "2.3.2",
     "react-test-renderer": "^17.0.2"
   }
